--- a/css/blog_list.css
+++ b/css/blog_list.css
@@ -13,6 +13,9 @@ a:link {
 .blog {
     width: 100%;
     padding: 10px 20px;
+    margin-bottom: 3px;
+    border-radius: 8px;
+    border: 1px solid #d5d5d5;
 }
 
 /* 博客的标题 */
