--- a/css/common.css
+++ b/css/common.css
@@ -34,6 +34,7 @@ html, body {
     margin-left: 30px;
     margin-right: 10px;
     border-radius: 50%;
+    border: 1px solid #000000;
 }
 
 /* 导航栏中的标题 */
@@ -94,7 +95,8 @@ html, body {
 .card img {
     width: 140px;
     height: 140px;
-    border-radius: 50%;
+    border-radius: 15%;
+    border: 1px solid #000000;
 }
 
 /* 用户名 */
