--- a/css/blog_list.css
+++ b/css/blog_list.css
@@ -13,16 +13,15 @@ a:hover {
 
 .blog {
     width: 100%;
-    padding: 10px 20px;
-    margin-bottom: 3px;
-    border-radius: 8px;
-    border: 1px solid #d5d5d5;
+    padding: 5px 10px;
+    margin-bottom: 0px;
+    border-bottom: 1px solid hsla(0, 0%, 84%, 0.5);
 }
 
 /* 博客的标题 */
 .blog .title {
     text-align: left;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 700;
     padding-top: 10px;
     padding-bottom: 5px;
@@ -31,6 +30,7 @@ a:hover {
 /* 博客的日期 */
 .blog .date {
     text-align: left;
+    font-size: 14px;
     padding-bottom: 10px;
     color: grey;
 }
