--- a/css/blog_list.css
+++ b/css/blog_list.css
@@ -1,8 +1,23 @@
+
+/* 这个文件里面放4个页面公共的一些样式，比如背景、导航栏等 */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    /* 和父元素的一样高，body 的父亲是 html，html 的父亲是浏览器窗口 */
+    height: 100%;
+    background-color:rgba(255, 255, 255, 0.5);
+}
 /* 设置链接的颜色 */
 a:link {
     color: rgb(0, 0, 0);
     text-decoration: none;
-    }
+    cursor:default
+    }  
 /* 设置鼠标悬停时链接的颜色 */
 a:hover {
     color: rgb(0, 52, 115);
@@ -15,9 +30,13 @@ a:hover {
     width: 100%;
     padding: 5px 10px;
     margin-bottom: 0px;
-    border-bottom: 1px solid hsla(0, 0%, 84%, 0.5);
+    /* border-radius: 8px; */
+    border-bottom: 1px solid hsla(0, 0%, 84%, 0.5) ;
 }
-
+/* 设置鼠标悬停时div的颜色 */
+.blog:hover {
+    background-color: rgba(255, 167, 255, 0.1);
+}
 /* 博客的标题 */
 .blog .title {
     text-align: left;
