--- a/css/mb.css
+++ b/css/mb.css
@@ -12,7 +12,7 @@ html, body {
     height: 100%;
     /* 页面背景 */
     background-color:rgb(221, 247, 255);
-
+}
 /* 导航栏 */
 .nav {
     width: 400px;
