--- a/css/common.css
+++ b/css/common.css
@@ -10,7 +10,7 @@ html, body {
     /* 和父元素的一样高，body 的父亲是 html，html 的父亲是浏览器窗口 */
     height: 100%;
     /* 页面背景 */
-    background-color:rgb(221, 247, 255);
+    background-color: rgba(209, 244, 255, 0.6);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
