--- a/css/blog_list.css
+++ b/css/blog_list.css
@@ -18,8 +18,6 @@ a:link {
     text-decoration: none;
     cursor:default
     }  
-/* 设置鼠标悬停时链接的颜色 */
-a:hover {}
 a:visited {
     color: black;
 }    
@@ -29,8 +27,14 @@ a:visited {
     width: 100%;
     padding: 5px 10px;
     margin-bottom: 0px;
-    /* border-radius: 8px; */
-    border-bottom: 1px solid hsla(0, 0%, 84%, 0.5) ;
+    border-radius: 8px;
+}
+/* 列表下划线 */
+.line {
+    width: calc(100% - 18px);
+    height: 1px;
+    margin: 0 auto;
+    background-color: rgba(103, 103, 103, 0.08);
 }
 /* 设置鼠标悬停时div的颜色 */
 .blog:hover {
@@ -39,9 +43,9 @@ a:visited {
 /* 博客的标题 */
 .blog .title {
     text-align: left;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 700;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-bottom: 5px;
 }
 
@@ -49,7 +53,7 @@ a:visited {
 .blog .date {
     text-align: left;
     font-size: 14px;
-    padding-bottom: 10px;
+    padding-bottom: 3px;
     color: grey;
 }
 
