--- a/css/common.css
+++ b/css/common.css
@@ -102,7 +102,7 @@ html, body {
 /* 用户名 */
 .card h3 {
     text-align: center;
-    padding: 10px 0;
+    padding-top: 10px;
 }
 
 /* 其它信息 */
@@ -112,7 +112,7 @@ html, body {
     text-decoration: none;
     text-align: center;
     color: rgb(8, 0, 34);
-    padding: 3px;
+    padding-top: 5px;
     cursor:default
 }
 .card a:hover{
