--- a/css/common.css
+++ b/css/common.css
@@ -8,7 +8,7 @@
 
 html, body {
     /* 和父元素的一样高，body 的父亲是 html，html 的父亲是浏览器窗口 */
-    height: 200%;
+    height: 100%;
     /* 页面背景 */
     background-color: rgb(209, 244, 255);
     background-position: center center;
@@ -61,7 +61,7 @@ html, body {
 /* 版心的样式 */
 .container {
     height: calc(100% - 55px);
-    width: 1000px;
+    width: 100%;
     margin: 0 auto;
     /* 为了让版心里面的子元素能够以左右布局的方式显示，使用 flex 布局 */
     display: flex;
@@ -78,7 +78,7 @@ html, body {
 /* 右侧区域样式 */
 .container .container-right {
     height: 100%;
-    width: 795px;
+    width: 100%;
     background-color: rgba(255, 255, 255, 0.5);
     border-radius: 8px;
 }
