--- a/css/common.css
+++ b/css/common.css
@@ -83,10 +83,10 @@ html, body {
 
 /* 用户信息卡片，也会在多个页面中用到 */
 .card {
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 8px;
     padding: 30px;
-    border: 1px solid #d5d5d5;
+    border: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 /* 用户头像 */
