--- a/css/common.css
+++ b/css/common.css
@@ -22,13 +22,17 @@ a:hover{
 .nav {
     width: 100%;
     height: 50px;
-    background-color: rgba(50, 50, 50, 0.2);
-    color: #fff;
+    background-color: #3471c0;
     display: flex;
     justify-content: start;
     align-items: center;
 }
-
+.nav .title a {
+    color: rgb(255, 255, 255);
+}
+.nav .title a:hover{
+    color: rgb(5, 0, 26);
+}    
 /* 导航栏中的 log */
 .nav img {
     width: 40px;
@@ -42,7 +46,7 @@ a:hover{
 /* 导航栏中的标题 */
 .nav .title {
     width: 180px;
-    font-size: 20px;  
+    font-size: 20px;
 }
 /* 导航栏中的占位符 */
 .nav .spacer {
@@ -55,7 +59,7 @@ a:hover{
     width: 60px;
     margin: 10px;
     text-decoration: none;
-    color: rgb(48, 48, 48);
+    color: #ffffff;
     cursor:default
 }
 
