--- a/css/common.css
+++ b/css/common.css
@@ -15,8 +15,12 @@ html, body {
     background-repeat: no-repeat;
     background-size: cover;
 } 
-a:hover{
-    color: rgb(0, 2, 112);
+
+.card a:hover {
+    color: rgb(10, 2, 112);
+}
+a:visited {
+    color: rgb(0, 0, 0);
 }
 /* 导航栏 */
 .nav {
@@ -66,6 +70,7 @@ a:hover{
 /* 版心的样式 */
 .container {
     width: 100%;
+    height: calc(100% - 55px);
     margin: 0 auto;
     /* 为了让版心里面的子元素能够以左右布局的方式显示，使用 flex 布局 */
     display: flex;
@@ -82,7 +87,7 @@ a:hover{
 .container .container-right {
     height: 100%;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #ffffff;
     border-radius: 8px;
 }
 
@@ -93,7 +98,9 @@ a:hover{
     padding: 30px;
     border: 1px solid rgba(0, 0, 0, 0.2);
 }
-
+.card a:link {
+    color: #000000;
+}
 /* 用户头像 */
 .card img {
     width: 140px;
