--- a/css/common.css
+++ b/css/common.css
@@ -93,7 +93,6 @@ a:visited {
 
 /* 用户信息卡片，也会在多个页面中用到 */
 .card {
-    background-color: rgba(255, 255, 255, 0.15);
     border-radius: 8px;
     padding: 30px;
     border: 1px solid rgba(0, 0, 0, 0.2);
@@ -106,7 +105,7 @@ a:visited {
     width: 140px;
     height: 140px;
     border-radius: 8px;
-    border: 1px solid #d5d5d5;
+    border: 1px solid rgba(0, 0, 0, 0.6);
 }
 
 /* 用户名 */
