--- a/css/common.css
+++ b/css/common.css
@@ -92,7 +92,6 @@ a:visited {
     border-radius: 8px;
     padding: 30px;
     border: 1px solid rgba(0, 0, 0, 0.2);
-    height: 300px;
 }
 /* 鼠标悬停时的效果 */
 
@@ -110,7 +109,7 @@ a:visited {
 /* 用户名 */
 .card h3 {
     text-align: center;
-    padding-top: 10px;
+    padding: 8px;
 }
 
 /* 其它信息 */
@@ -124,13 +123,16 @@ a:visited {
 }
 .card .aa {
     width: 100%;
-    height: 22px;
+    height: 25px;
     text-align: center;
-    line-height: 10px;
+    line-height: 12px;
     font-size: 16px;
     /* cursor: pointer;border: 1px solid ; */
 }
 .card .aa:hover {
     font-size: 17px; /* 悬停时字体变大 */
 }
-
+.card .aa:hover {
+    background-color: rgba(0, 0, 0, 0.05);
+    cursor: pointer;border: 1px solid #000000;
+}
