--- a/css/c1.css
+++ b/css/c1.css
@@ -10,7 +10,7 @@ html, body {
     /* 和父元素的一样高，body 的父亲是 html，html 的父亲是浏览器窗口 */
     height: 100%;
     /* 页面背景 */
-    background-color: rgb(209, 244, 255);
+    background-color: #d1f4ff;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -125,7 +125,7 @@ a:visited {
     width: 100%;
     height: 25px;
     text-align: center;
-    line-height: 23px;
+    line-height: 25px;
     font-size: 16px;
 
 }
@@ -133,9 +133,8 @@ a:visited {
     font-size: 17px; /* 悬停时字体变大 */
 }
 .card .aa:hover {
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: rgba(0, 0, 0, 0.08);
     cursor: default;
-    border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 8px;
 }
 .aa1 {
