--- a/css/c1.css
+++ b/css/c1.css
@@ -109,9 +109,7 @@ a:visited {
 /* 用户名 */
 .card h3 {
     text-align: center;
-    padding: 8px;
 }
-
 /* 其它信息 */
 .card a {
     /* a 标签是行内元素，设置尺寸、边距都可能失效，要转成块级元素 */
@@ -120,6 +118,22 @@ a:visited {
     text-align: center;
     /* padding-top: 5px; */
     cursor:default
+}
+.card .aaa {
+    width: 100%;
+    height: 35px;
+    text-align: center;
+    line-height: 35px;
+    border-radius: 8px;
+    background-color: #7cffeb;
+}
+.card .aaa:hover {
+    font-size: 18px; /* 悬停时字体变大 */
+}
+.card .aaa:hover {
+    background-color: #b6fe6e;
+    cursor: default;
+    border-radius: 8px;
 }
 .card .aa {
     width: 100%;
