--- a/css/c1.css
+++ b/css/c1.css
@@ -123,9 +123,10 @@ a:visited {
     width: 100%;
     height: 35px;
     text-align: center;
-    line-height: 35px;
+    line-height: 32px;
     border-radius: 8px;
     background-color: #7cffeb;
+    border: 1px solid #9b9b9b;
 }
 .card .aaa:hover {
     font-size: 18px; /* 悬停时字体变大 */
