--- a/css/c1.css
+++ b/css/c1.css
@@ -38,31 +38,32 @@ a:visited {
     width: 40px;
     height: 40px;
     margin-left: 15px;
-    margin-right: 0px;
+    margin-right: 5px;
     border-radius: 50%;
     border: 1px solid #000000;
 }
 
 /* 导航栏中的标题 */
 .nav .title {
-    width: 180px;
+    width: 130px;
     font-size: 20px;
 }
 /* 导航栏中的占位符 */
 .nav .spacer {
     height: 40px;
-    width: calc(100% - 370px);
+    width: calc(100% - 250px);
 }
 
 /* 导航栏中的链接 */
 .nav a {
     width: 60px;
-    margin: 10px;
     text-decoration: none;
-    color: #ffffff;
+    /* color: #ffffff00; */
     cursor:default
 }
-
+.nav p { 
+    font-size: 0px; 
+}
 /* 版心的样式 */
 .container {
     width: 100%;
