--- a/css/c2.css
+++ b/css/c2.css
@@ -16,7 +16,7 @@ a:visited {
 /* 导航栏 */
 .nav {
     width: 100%;
-    height: 80px;
+    height: 70px;
     background-color: #3471c0;
     display: flex;
     justify-content: start;
@@ -40,28 +40,30 @@ a:visited {
 
 /* 导航栏中的标题 */
 .nav .title {
-    width: 180px;
-    font-size: 20px;
+    width: 125px;
+    font-size: 18px;
 }
 /* 导航栏中的占位符 */
 .nav .spacer {
     height: 40px;
-    width: calc(100% - 370px);
+    width: calc(100% - 255px);
 }
 
 /* 导航栏中的链接 */
 .nav a {
     width: 60px;
-    margin: 10px;
+    /* margin: 10px; */
     text-decoration: none;
     color: #ffffff;
     cursor:default
 }
-
+.nav p { 
+    font-size: 18px;
+}
 /* 版心的样式 */
 .container {
     width: 100%;
-    height: calc(100% - 80px);
+    height: calc(100% - 70px);
     margin: 0 auto;
     /* 为了让版心里面的子元素能够以左右布局的方式显示，使用 flex 布局 */
     display: flex;
