--- a/css/c2.css
+++ b/css/c2.css
@@ -38,7 +38,7 @@ a:visited {
 /* 导航栏中的标题 */
 .nav .title {
     width: 125px;
-    font-size: 20px;
+    font-size: 25px;
 }
 /* 导航栏中的占位符 */
 .nav .spacer {
@@ -46,7 +46,10 @@ a:visited {
     width: calc(100% - 260px);
 }
 .ctrap {
-    width: 60px;
+    width: 70px;
+    background-color: #00000050;
+    padding: 5px;
+    border-radius: 10px;
 }
 /* 导航栏中的链接 */
 .nav a {
