--- a/css/c2.css
+++ b/css/c2.css
@@ -10,6 +10,9 @@ html, body {
     /* 和父元素的一样高，body 的父亲是 html，html 的父亲是浏览器窗口 */
     height: 100%;
 }
+a:link {
+    cursor:default
+}
 /* 导航栏 */
 .nav {
     width: 100%;
@@ -31,7 +34,6 @@ html, body {
     border-radius: 50%;
     border: 1px solid #000000;
 }
-
 /* 导航栏中的标题 */
 .nav .title {
     width: 125px;
@@ -47,6 +49,9 @@ html, body {
     background-color: #00000050;
     padding: 5px;
     border-radius: 10px;
+}
+.ctrap:hover{
+    background-color: #00000080;
 }
 /* 导航栏中的链接 */
 .nav a {
