--- a/html/ghmd.css
+++ b/html/ghmd.css
@@ -4,6 +4,11 @@
  *
  * Do NOT use SRI with dynamically generated files! More information: https://www.jsdelivr.com/using-sri-with-dynamic-files
  */
+ * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
  body {
     display: flex;
     justify-content: center;
@@ -15,10 +20,10 @@
     max-width: 960px;
     width: 100%;
     margin: 10px;
-    padding: 20px;
+    padding: 10px;
     background: #fff;
-    border-radius: 6px;
-    box-shadow: 0 1px 3px rgba(27,31,35,0.12);
+    /* border-radius: 6px; */
+    /* box-shadow: 0 1px 3px rgba(27,31,35,0.12); */
   }
 .markdown-body {
     --base-size-4: 0.25rem;
