--- a/css/c2.css
+++ b/css/c2.css
@@ -22,7 +22,7 @@ a:link {
     justify-content: start;
     align-items: center;
 }
-.nav .title a:hover{
+.nav a:hover{
     color: rgb(5, 0, 26);
 }  
 /* 导航栏中的 log */
@@ -51,7 +51,7 @@ a:link {
     border-radius: 10px;
 }
 .ctrap:hover{
-    background-color: #00000080;
+    background-color: #00000040;
 }
 /* 导航栏中的链接 */
 .nav a {
