--- a/j/jj.css
+++ b/j/jj.css
@@ -41,8 +41,7 @@
     max-width: 800px;
     max-height: 450px;
     width: 100vw;
-    /* height: 560px; */
-    /* aspect-ratio: 16 / 9; */
+    aspect-ratio: 16 / 9;
     background: #000;
     margin: 0;
   }
