--- a/css/c1.css
+++ b/css/c1.css
@@ -103,9 +103,11 @@ a:visited {
     width: 140px;
     height: 140px;
     border-radius: 8px;
-    border: 1px solid rgba(0, 0, 0, 0.6);
+    border: 4px solid rgba(0, 182, 24, 0.1);
 }
-
+.card img:hover{
+    border: 1px solid rgba(0, 182, 24, 0.5);
+}
 /* 用户名 */
 .card h3 {
     text-align: center;
